# -Jetson-Orin-Nano-Qwen3-TensorRT-

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile.jetson  JETSON_DOCKER.md  README.md  docker-compose.jetson.yml  dockerfile  readme.md
apps/qwen3_server/: qwen3_http_server.py
cmake/: CPM.cmake  cuda.cmake
demo/: CMakeLists.txt  chat_qwen.cpp  main.cpp  main_qwen.cpp  main_qwen3.cpp
docs/: jetson_docker.md  model_deploy.md  qwen3_infer.md  qwen3_int8_inference_interview.md
hf_infer/: llama3_infer.py  qwen2_infer.py
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h  tiktoken.h  unicode-data.h  unicode.h  unordered_dense.h
kuiper/include/model/: config.h  llama3.h  model.h  qwen2.h  qwen3.h  raw_model_data.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
kuiper/include/sampler/: argmax_sampler.h  sampler.h
kuiper/include/tensor/: tensor.h
test/: CMakeLists.txt  test_main.cpp  utils.cu  utils.cuh
test/optimized/: test_allocator.cpp
test/test_cu/: test_cu_wrap.cpp
test/test_model/: test_llama_cpu.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
tools/: config.json  export_llama.py  export_llama3.py  export_qwen2.py  model.py  model_qwen2.py
tools/export_qwen3/: config.py  export_safetensors_bin.py  load.py  model.py  quantize_bin2_int8.py  write_bin.py
(+63 files in other folders)
